--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#1E4E46" />
     <title>Hunter - Lead Prospecting for Web Developers</title>
     <meta name="description" content="Search and filter prospect data for web developers and social media agencies. No credit card required." />
     <meta name="author" content="Sagentics" />
@@ -15,6 +16,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <!-- Preconnect hints for image CDNs -->
+    <link rel="preconnect" href="https://images.weserv.nl" crossorigin>
+    <link rel="preconnect" href="https://lh3.googleusercontent.com" crossorigin>
   </head>
 
   <body>
